@@ -24,15 +24,9 @@ devices = dict(
                       lowlevel = True),
 
     det      = device('nicos.taco.FRMDetector',
-                      t  = 'timer',
-                      m1 = 'mon1',
-                      m2 = 'mon2',
-                      m3 = None,
-                      z1 = 'ctr1',
-                      z2 = None,
-                      z3 = None,
-                      z4 = None,
-                      z5 = None,
+                      timer  = 'timer',
+                      monitors = ['mon1', 'mon2'],
+                      counters = ['ctr1'],
                       fmtstr = 'timer %s, mon1 %s, mon2 %s, ctr1 %s',
                       maxage = 2,
                       pollinterval = 0.5),
